sharktech-k3s/traefik-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: traefik-gateway
  namespace: traefik
  annotations:
    cert-manager.io/cluster-issuer: clusterissuer
spec:
  gatewayClassName: traefik
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: whoami-https
      protocol: HTTPS
      port: 443
      hostname: whoami.3756home.org
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: whoami-https
      allowedRoutes:
        namespaces:
          from: All

    - name: pics-immich-https
      protocol: HTTPS
      port: 443
      hostname: pics.3756home.org
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: pics-immich-https
      allowedRoutes:
        namespaces:
          from: All
